<resources>

    <string-array name="contacts_array">
        <item>Ali</item>
        <item>Ahmed</item>
        <item>Uzair</item>
        <item>Umair</item>
        <item>Shahzaib</item>

    </string-array>


    <string-array name="details_array">

        <item>Details of Ali</item>
        <item>Details of Ahmed</item>
        <item>Details of Uzair</item>
        <item>Details of Umair</item>
        <item>Details of Shahzaib</item>


    </string-array>


    <string name="app_name">BSCS-SEC_A_BATCH-20</string>
    <string name="myemlto">To</string>
    <string name="myeml2">Name</string>
    <string name="to">to</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="write_here">Write Here</string>
    <string name="button">Button</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="go_to_main_activity">Go to Main Activity</string>
    <string name="open_dialpad">Open DialPad</string>
    <string name="open_google">Open Google</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="todo">TODO</string>
    <string name="capture_image">Capture Image</string>
    <string name="todoimgs">TODO</string>
    <string name="this_is_second_activity">This is Second Activity</string>
    <string name="save_pref">Save Pref</string>
    <string name="show_pref">Show Pref</string>
    <string name="txtsharefpref">TextView</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="download_image">Download Image</string>
    <string name="todoimg2" />
    <string name="button2">Button</string>
    <string name="download_web_content">Download Web Content</string>
    <string name="request_for_permission">Request For Permission</string>
    <string name="check_permission">Check Permission</string>
    <string name="mobilename">MobileName</string>
    <string name="company">Company</string>
    <string name="price">Price</string>
    <string name="title_activity_card_view_scrolling_main">CardViewScrollingActivityMain</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="todo3">TODO</string>
    <string name="landscape_mode">LandScape Mode</string>
    <string name="play_pause">play/pause</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Contacts </string>>
    <string name="add_contact" />
    <string name="add_contacts">add_contact</string>
    <string name="firstname">First Name</string>
    <string name="secondname">Last Name</string>
    <string name="phone_number">Phone </string>
    <string name="email">Email</string>
    <string name="home_address">Home Adress</string>
    <string name="buttonsavetosql">SaveToDB</string>
    <string name="click_here">Click Here</string>
    <string name="update">Update</string>
    <string name="deletefromdb">Delete from db</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="send">Send</string>
    <string name="readfromfirebase">ReadFromFirebase</string>
    <string name="textview2">TextView</string>
    <string name="todo4">TODO</string>
    <string name="textview4">TextView</string>
    <string name="save_text">Save Text</string>
    <string name="show_text">Show Text</string>
    <string name="namess">Name</string>
    <string name="namesss">Name</string>
    <string name="phonesss">Phone</string>
    <string name="namer">Name</string>
    <string name="content">Content</string>
    <string name="sensorvalues">SensorValues</string>
</resources>