<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="DuplicateIds">





    <EditText
        android:id="@+id/myemaito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/To"
        android:inputType="textPersonName"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/myemailfrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/from"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/myemailbody"
        android:layout_width="match_parent"
        android:layout_height="548dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/write_here"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:text="@string/button"

        tools:ignore="RtlHardcoded" />
</LinearLayout>