<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intentexample.intentDialPadExample">

    <Button
        android:id="@+id/button2"
        android:layout_width="189dp"
        android:layout_height="53dp"
        android:layout_marginTop="68dp"
        android:onClick="OpenDialPad"
        android:text="@string/open_dialpad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:onClick="OpenBrowser"
        android:text="@string/open_google"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="264dp"
        android:layout_height="88dp"
        android:layout_marginTop="28dp"
        android:onClick="OpenGallery"
        android:text="@string/open_gallery"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageView
        android:id="@+id/intentimgallery"
        android:layout_width="195dp"
        android:layout_height="230dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>