<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SqlLiteExample.AddNewContact"
    android:padding="16dp"

    >

    <EditText
        android:id="@+id/edtfirstname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/edtsecondname"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtfirstname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="@string/secondname"
        android:inputType="textPersonName"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/edtphonenumber"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtsecondname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="78dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number|textPersonName"
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/edtemail"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtphonenumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="81dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edthomeaddress"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:hint="@string/home_address"
        android:inputType="textPersonName"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="156dp"
        android:layout_height="77dp"
        android:layout_below="@+id/edthomeaddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="65dp"
        android:text="@string/buttonsavetosql"
        tools:ignore="VisualLintButtonSize"

        android:onClick="SaveIntoDB"

        />


</RelativeLayout>