<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtMobileName"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="76dp"
        android:text="@string/mobilename"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtMobileCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/company"
        app:layout_constraintStart_toEndOf="@+id/txtMobileName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMobilePrice"
        android:layout_width="59dp"
        android:layout_height="22dp"
        android:layout_marginTop="76dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/txtMobileCompany"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>